# Pyx

./: .gitignore  LICENSE  README.md  index.html  latest.json  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  api.ts  icons.tsx  notify.ts  types.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  discovery.rs  fileutil.rs  hash.rs  lib.rs  main.rs  protocol.rs  protocol_io.rs  receive.rs  send.rs  state.rs  transport.rs
src-tauri/tests/: transfer.rs
src/components/: Avatar.tsx  OfferModal.tsx  PeerCard.tsx  TransferList.tsx  UpdateBanner.tsx
