[package]
name = "pyx"
version = "0.2.0"
description = "Peer-to-peer LAN file sharing"
authors = ["you"]
edition = "2021"

[lib]
name = "pyx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
rustls = "0.23"
rcgen = "0.13"
mdns-sd = "0.13"
blake3 = "1"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[dev-dependencies]
tempfile = "3"

